fix stack-overflow icon

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/advaitapandya/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/advaita13"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="https://stackoverflow.com/users/7207883/nsadi"><i class="fab fa-stackOverflow"></i></a>
+                        <a class="social-icon" href="https://stackoverflow.com/users/7207883/nsadi"><i class="fab fa-stack-overflow"></i></a>
                     </div>
                 </div>
             </section>
