--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Backend Developer</h3>
                             <div class="subheading mb-3">PayPay</div>
-                            <p>Help transition PayPay from an industry disruptor to a robust, reliable payment platform. Worked on integration of PayPay's backend systems with partners to make the platform ubiquitous and cross-compatible with many of Japan's exiting payment and financial networks.</p>
+                            <p>Help transition PayPay from an industry disruptor to a robust, reliable payment platform. Worked on integration of PayPay's backend systems with partners to make the platform ubiquitous and cross-compatible with many of Japan's existing payment and financial networks.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">May 2021 - Present</span></div>
                     </div>
