update end date for PayPay

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                             <div class="subheading mb-3">PayPay</div>
                             <p>Help transition PayPay from an industry disruptor to a robust, reliable payment platform. Worked on integration of PayPay's backend systems with partners to make the platform ubiquitous and cross-compatible with many of Japan's existing payment and financial networks.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">May 2021 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">May 2021 - Nov 2021</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
