--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <span class="text-primary">Pandya</span>
                     </h1>
                     <div class="subheading mb-5">
-                        Tokyo ·
+                        London ·
                         <a href="mailto:adipandya@gmail.com">adipandya@gmail.com</a>
                     </div>
                     <p id="desc" class="lead mb-5"></p>
@@ -61,6 +61,15 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <h3 class="mb-0">Product Engineer</h3>
+                            <div class="subheading mb-3">Wise</div>
+                            <p>My team is focused on giving our customers the most convenient, fast, and cost-effective way to receive international payments.
+                            We do that by giving our customers real account details, like IBANs in Europe and sort codes with account numbers in the UK, in 10 different currencies. And growing.</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Nov 2021 - Ongoing</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0">Backend Developer</h3>
                             <div class="subheading mb-3">PayPay</div>
                             <p>Help transition PayPay from an industry disruptor to a robust, reliable payment platform. Worked on integration of PayPay's backend systems with partners to make the platform ubiquitous and cross-compatible with many of Japan's existing payment and financial networks.</p>
@@ -70,7 +79,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Backend Developer</h3>
-                            <div class="subheading mb-3">Rakuten Payment Inc</div>
+                            <div class="subheading mb-3">Rakuten Pay</div>
                             <p>Helped scale Rakuten Pay infrastructure for the new era of cashless. Revamped core payment system by splitting existing monolith application into microservices, Automated end-to-end load testing by integrating it into the build pipeline to improve system performance under load</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">October 2019 - May 2021</span></div>
@@ -78,7 +87,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">iOS Developer</h3>
-                            <div class="subheading mb-3">Rakuten Payment Inc</div>
+                            <div class="subheading mb-3">Rakuten Pay</div>
                             <p>Part of the founding team of Rakuten Pay service as an iOS Developer. Grew the app from 0 to over 12 million users (and counting) which helped drive Japan's transformation to cashless. Responsible for the core architecture of the app, CI/CD platform and owned more than 40 production app releases with more than 99% success rate and a high rate of user satisfaction of 4.6 rating on AppStore</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">October 2016 - October 2019</span></div>
